tests/NormalTests/paczka1/fuzzy1/87586994.err
Error in line 10: 30zIKqnYatO A569 4,8
Error in line 12: 30zIKqnYatO S980 48,8
Error in line 16: 8ja6i3G S98' 45,9
Error in line 20: 71DHcbAN A569 -5,0
Error in line 21: 30zIKqnYatO A569 60,9
Error in line 18: 71DHcbAN A569 83,4
Error in line 19: zeHzoZdUvO S980 86,4
Error in line 25: 71DHcbAN S980 58,2
Error in line 24: 8ja6i3G A384 69,2
Error in line 35: A384 A569 29,6
